--- a/pre/Cargo.toml
+++ b/pre/Cargo.toml
@@ -11,4 +11,6 @@ include = [
 ]
 
 [dependencies]
-osmpbfreader = "0.13.2"
+osmpbfreader = "0.13"
+serde = { version = "1.0", features = ["derive"] }
+bincode = "1.2"
