--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -14,6 +14,8 @@ include = [
 ]
 
 [dependencies]
+actix-files = "0.1.6"
 actix-web = "1.0.8"
-serde = { version = "1.0", features = ["derive"] }
 bincode = "1.2"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
