--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -19,3 +19,4 @@ actix-web = "1.0.8"
 bincode = "1.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+priority-queue = "0.6.0"
