--- a/pre/Cargo.toml
+++ b/pre/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "osm-dijkstra-pre"
 version = "1.0.0"
-authors = [ "Felix Buehler <account@buehler.rocks>", "Simon Matejetz <asdf@todo.de>" ]
+authors = [ "Felix Buehler <account@buehler.rocks>" ]
 
 include = [
   "README.md",
@@ -11,6 +11,6 @@ include = [
 ]
 
 [dependencies]
+bincode = "1.2"
 osmpbfreader = "0.13"
 serde = { version = "1.0", features = ["derive"] }
-bincode = "1.2"
