--- a/pre/Cargo.toml
+++ b/pre/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "osm-dijkstra-pre"
+name = "osm_dijkstra_pre"
 version = "1.0.0"
 authors = [ "Felix Buehler <account@buehler.rocks>" ]
 
@@ -13,4 +13,5 @@ include = [
 [dependencies]
 bincode = "1.2"
 osmpbfreader = "0.13"
+rayon = "1.3"
 serde = { version = "1.0", features = ["derive"] }
