--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "osm-dijkstra-web"
+name = "osm_dijkstra_web"
 version = "1.0.0"
-authors = [ "Felix Buehler <account@buehler.rocks>", "Simon Matejetz <asdf@todo.de>" ]
+authors = [ "Felix Buehler <account@buehler.rocks>"]
 
 include = [
   "README.md",
