--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -1,21 +1,19 @@
 [package]
 name = "osm_dijkstra_web"
 version = "1.0.0"
-authors = [ "Felix Buehler <account@buehler.rocks>"]
-
+authors = [ "Felix Buehler <account@buehler.rocks>" ]
+edition = "2018"
 include = [
   "README.md",
   ".gitignore",
   "Cargo.toml",
   "src/*.rs",
-  "static/*.css",
-  "static/*.html",
-  "static/*.js"
 ]
 
 [dependencies]
-actix-files = "0.1.6"
-actix-web = "1.0.8"
+actix-files = "0.2"
+actix-web = "2.0"
 bincode = "1.2"
+rayon = "1.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
