--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -12,8 +12,10 @@ include = [
 
 [dependencies]
 actix-files = "0.2"
+actix-rt = "1.0"
 actix-web = "2.0"
 bincode = "1.2"
+env_logger = "0.6"
 rayon = "1.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
