--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -16,6 +16,7 @@ actix-rt = "1.0"
 actix-web = "2.0"
 bincode = "1.2"
 env_logger = "0.7"
+log = "0.4"
 rayon = "1.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
