--- a/pre/Cargo.toml
+++ b/pre/Cargo.toml
@@ -12,6 +12,7 @@ include = [
 
 [dependencies]
 bincode = "1.2"
+num_cpus = "1.12"
 osmpbfreader = "0.13"
 rayon = "1.3"
 serde = { version = "1.0", features = ["derive"] }
